pushed the balance manager into the manager factory